# Soa

./: .gitignore  Comandos para liberar semaforos y memoria tomada.txt  Compatibilidad.txt  README.md  TODO.txt
Link Utils/: Daemon process.txt  Sockets Links.txt
TP1/Ejercicio 1/: TEST EJER1.txt  ejercicio1.doc  ejercicio1.sh  input.txt
TP1/Ejercicio 2/: TEST EJER 2.txt  ejercicio2-v2.sh  ejercicio2.sh  salida.txt
TP1/Ejercicio 3/: interlineado.sh  interlineadoV2.sh  interlineadoV3.sh  miArchivoPUEDOESCRIBIR.txt  out_miArchivo.txt  out_miArchivoPUEDOESCRIBIR.txt
TP1/Ejercicio 4/: ejercicio4.sh  matriz  script  scriptV2.sh  scriptV3.sh
TP1/Ejercicio 5/: .txt  dependencias.sh  dependencias.sh~  pepe.txt~  resultado.txt  tp5-a-1.sh
TP1/Ejercicio 6/: RegEx.txt  ej6.sh  ejercicio6.sh  entrada_tabulada.txt  input.txt  script inicial.txt
TP2/: TODO.txt
TP2/Ejercicio 1/: Makefile  Modo de Uso.txt  Preguntas Ej1.txt  programaA.c  programaB.c
TP2/Ejercicio 2/: Makefile  Modo de Uso.txt  Respuestas.txt  ej2  ej2.c  ej2.h
TP2/Ejercicio 3/: EJERCICIO3  (+4 more)
TP4/: Makefile  TODO.txt  TP4.cpp  TP4.kdev4  cliente  cliente.cpp  cliente.cpp~  cliente.h  cliente2.cpp  config_cliente  config_server  ejemplo.c  jugador.cpp  jugador.h  main.cpp  partida.c  partida.h  torneo.c  torneo.h  utils.colaDinamica.c  utils.semaforo.c  utils.semaforo.h
TP4/FRONT/: .cliente.cpp.kate-swp  CMakeLists.txt  EJE  Makefile  TODO.txt  TP4.h  cliente  cliente (copia).h  cliente.cpp  cliente.h  cliente.h.gch  config_cliente  makefile(partida)  partida.c  partida.cpp  partida.h  partida.h.gch
(+147 files in other folders)
